--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
     "@babel/node": "^7.2.2",
     "@babel/polyfill": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
-    "nodemon": "^1.18.11"
+    "chai": "^4.2.0",
+    "mocha": "^6.1.3",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nodemon": "^1.18.11",
+    "nyc": "^13.3.0",
+    "supertest": "^4.0.2"
   },
   "scripts": {
-    "start" : "nodemon --exec babel-node server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec babel-node server/index.js",
+    "test": "nyc mocha --timeout 2000 -r @babel/register server/test.js --exit"
   },
   "repository": {
     "type": "git",
