Fix: travis build error

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "scripts": {
     "start": "nodemon --exec babel-node server/index.js",
-    "test": "nyc mocha --timeout 2000 -r @babel/register server/test.js --exit"
+    "test": "nyc mocha --timeout 2000 -r @babel/register server/test.js --exit",
+    "coverage" : "nyc report --reporter=text-lcov | coveralls",
+    "coveralls" : "nyc --reporter=lcov --reporter=text-lcov npm test"
   },
   "repository": {
     "type": "git",
