--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/polyfill": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "chai": "^4.2.0",
+    "coveralls": "^3.0.3",
     "mocha": "^6.1.3",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.18.11",
@@ -28,8 +29,8 @@
   "scripts": {
     "start": "nodemon --exec babel-node server/index.js",
     "test": "nyc mocha --timeout 2000 -r @babel/register server/test.js --exit",
-    "coverage" : "nyc report --reporter=text-lcov | coveralls",
-    "coveralls" : "nyc --reporter=lcov --reporter=text-lcov npm test"
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test"
   },
   "repository": {
     "type": "git",
